--- a/0x00-html_advanced/21-index.html
+++ b/0x00-html_advanced/21-index.html
@@ -23,12 +23,12 @@
         </div>
         <nav>
           <a href="/">Home</a>
-          <a href="services">Services</a>
-          <a href="works">Works</a>
-          <a href="about">About</a>
-          <a href="latest_news">Latest news</a>
-          <a href="testimonials">Testimonials</a>
-          <a href="contact">Contact</a>
+          <a href="#services">Services</a>
+          <a href="#works">Works</a>
+          <a href="#about">About</a>
+          <a href="#latest_news">Latest news</a>
+          <a href="#testimonials">Testimonials</a>
+          <a href="#contact">Contact</a>
         </nav>
       </div>
     </header>
@@ -196,7 +196,7 @@
       <div>
         <a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
         <a href="https://twitter.com/holbertonschool">Twitter</a>
-        <a href="https://www.instagram.com/holbertonschool/">instagram</a>
+        <a href="https://www.instagram.com/holbertonschool/">Instagram</a>
       </div>
     </footer>
   </body>
