--- a/0x00-html_advanced/22-index.html
+++ b/0x00-html_advanced/22-index.html
@@ -23,12 +23,12 @@
         </div>
         <nav>
           <a href="/">Home</a>
-          <a href="services">Services</a>
-          <a href="works">Works</a>
-          <a href="about">About</a>
-          <a href="latest_news">Latest news</a>
-          <a href="testimonials">Testimonials</a>
-          <a href="contact">Contact</a>
+          <a href="#services">Services</a>
+          <a href="#works">Works</a>
+          <a href="#about">About</a>
+          <a href="#latest_news">Latest news</a>
+          <a href="#testimonials">Testimonials</a>
+          <a href="#contact">Contact</a>
         </nav>
       </div>
     </header>
@@ -114,7 +114,7 @@
               quibusdam atque maxime cum!
             </p>
           </div>
-          <a href="/about.html">Learn more about us</a>
+          <a href="about.html">Learn more about us</a>
         </div>
       </section>
 
@@ -189,7 +189,7 @@
               Quae contraria sunt his, malane?
             </p>
           </div>
-          <a href="/contact.html">Get in touch</a>
+          <a href="contact.html">Get in touch</a>
         </div>
       </section>
     </main>
