Put list in links

--- a/0x00-html_advanced/24-index.html
+++ b/0x00-html_advanced/24-index.html
@@ -21,15 +21,15 @@
         <div>
           <a href="/"><span>Techium</span></a>
         </div>
-        <nav>
-          <a href="/">Home</a>
-          <a href="#services">Services</a>
-          <a href="#works">Works</a>
-          <a href="#about">About</a>
-          <a href="#latest_news">Latest news</a>
-          <a href="#testimonials">Testimonials</a>
-          <a href="#contact">Contact</a>
-        </nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#works">Works</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#latest_news">Latest news</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
       </div>
     </header>
 
@@ -53,26 +53,12 @@
             <p>We work with you</p>
           </header>
           <div>
-            <ul>
-              <li>
-                <h3><a href="#">Design & Concept</a></h3>
-              </li>
-              <li>
-                <h3><a href="#">Digital Strategy</a></h3>
-              </li>
-              <li>
-                <h3><a href="#">Content Strategy</a></h3>
-              </li>
-              <li>
-                <h3><a href="#">UX Design</a></h3>
-              </li>
-              <li>
-                <h3><a href="#">Web Development</a></h3>
-              </li>
-              <li>
-                <h3><a href="#">Social Media</a></h3>
-              </li>
-            </ul>
+            <h3><a href="#">Design & Concept</a></h3>
+            <h3><a href="#">Digital Strategy</a></h3>
+            <h3><a href="#">Content Strategy</a></h3>
+            <h3><a href="#">UX Design</a></h3>
+            <h3><a href="#">Web Development</a></h3>
+            <h3><a href="#">Social Media</a></h3>
           </div>
         </div>
       </section>
@@ -218,11 +204,9 @@
           <li>
             <a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
           </li>
+          <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
           <li>
-            <a href="https://twitter.com/holbertonschool">Twitter</a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/holbertonschool/">instagram</a>
+            <a href="https://www.instagram.com/holbertonschool/">Instagram</a>
           </li>
         </ul>
       </div>
