--- a/0x00-html_advanced/30-styleguide.html
+++ b/0x00-html_advanced/30-styleguide.html
@@ -83,7 +83,8 @@
       <section>
         <header><h2>Blockquotes</h2></header>
         <div>
-          <h3>Inline quote <q>Stay hungry. Stay foolish</q></h3>
+          <h3>Inline quote</h3>
+          <q>Stay hungry. Stay foolish</q>
         </div>
         <div>
           <h2>Blockquote</h2>
