--- a/0x00-html_advanced/31-index.html
+++ b/0x00-html_advanced/31-index.html
@@ -225,8 +225,7 @@
 
     <!-- Footer -->
     <footer>
-      234 Washington Street <br />
-      Urbana, Illinois
+      <address>234 Washington Street<br />Urbana, Illinois</address>
       <div>
         <ul>
           <li>
