--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -153,7 +153,7 @@
                 Star Wars: Episode V - The Empire Strikes Back
               </th>
               <td>Irvin Kershner</td>
-              <td>May 21sth, 1980</td>
+              <td>May 21st, 1980</td>
             </tr>
           </tbody>
           <tfoot>
